--- a/Reinforced.Lattice.CaseStudies.ColumnsOperations/doc/cshtml-config.cshtml
+++ b/Reinforced.Lattice.CaseStudies.ColumnsOperations/doc/cshtml-config.cshtml
@@ -3,7 +3,7 @@
 @model Reinforced.Lattice.CaseStudies.GettingItWorking.Models.HomeIndexViewModel
 @{
     var conf = Model.Table;
-    conf.Column(x => x.IsActive)...  // <-- yes, we can confiure table in .cshtml
+    conf.Column(x => x.IsActive)...  // <-- yes, we can configure table in .cshtml
 }
 
 <div id="table"></div>
