--- a/Reinforced.Lattice.CaseStudies.CellsTemplating/doc/date-momentjs.cshtml
+++ b/Reinforced.Lattice.CaseStudies.CellsTemplating/doc/date-momentjs.cshtml
@@ -1,5 +1,5 @@
 @{
-    conf.Column(c => c.LastOrderDate).Title("Last order").Format("`moment({@}).fromNow()`");
+    conf.Column(c => c.LastOrderDate).Title("Last order").Format("`moment({#}).fromNow()`");
 }
 
 @* ... *@
