--- a/Reinforced.Lattice.CaseStudies.Partition/Views/ServerPartition/Index.cshtml
+++ b/Reinforced.Lattice.CaseStudies.Partition/Views/ServerPartition/Index.cshtml
@@ -20,18 +20,38 @@
 
 @section scripts {
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>
-<script type="text/javascript">
-            function formatRating(v) {
-                var s = "<div style='color:orange' class='text-center'>";
-                for (var i = 0; i < 5; i++) {
-                    if (i < v.DataObject.Rating) s += "<span class='glyphicon glyphicon-star'></span>";
-                    else s += "<span class='glyphicon glyphicon-star-empty'></span>";
-                }
-                s += "</div>";
-                return s;
+    <script type="text/javascript">
+        function formatRating(v) {
+            var s = "<div style='color:orange' class='text-center'>";
+            for (var i = 0; i < 5; i++) {
+                if (i < v.DataObject.Rating) s += "<span class='glyphicon glyphicon-star'></span>";
+                else s += "<span class='glyphicon glyphicon-star-empty'></span>";
             }
-</script>
+            s += "</div>";
+            return s;
+        }
+            
+        /*
+        * People asked me to fix column widths for these tables.
+        * Since Reinforced.Lattice does not depend on user's layout, we 
+        * use this simple function to fix columns widths. 
+        * 
+        * How to embed that fix into table layout is described in 
+        * core templating case study
+        */
+        function fixColumnWidths(e) {
+            $(e.Renderer.RootElement).find('th').each(function () {
+                var sx = $(this).width();
+                $(this).css('width', sx + 'px');
+            });
+        }
+    </script>
+    <style type="text/css">
+        [data-track='h-Rating'] {
+            width: 140px;
+        }
+    </style>
     @{ Html.RenderTemplates("lt", "Lattice_Templates_Bootstrap"); }
-    @Model.ScrollbarTable.InitializationScript("scrollTable", "window.$$scrollTable")
-    @Model.PagingTable.InitializationScript("pagingTable", "window.$$pagingTable")
+    @Model.ScrollbarTable.OnInitialized("fixColumnWidths").InitializationScript("scrollTable", "window.$$scrollTable")
+    @Model.PagingTable.OnInitialized("fixColumnWidths").InitializationScript("pagingTable", "window.$$pagingTable")
 }
