--- a/Reinforced.Lattice.CaseStudies.Ordering/Views/RadioOrdering/Index.cshtml
+++ b/Reinforced.Lattice.CaseStudies.Ordering/Views/RadioOrdering/Index.cshtml
@@ -10,9 +10,10 @@
 @model Reinforced.Lattice.CaseStudies.Ordering.Models.HomeIndexViewModel
 @{
     var conf = Model.Table;
+    conf.LoadingIndicator(where: "lt"); // to see when data retrieved from server
     conf.Column(c => c.FirstName)
-        .Title("First Name <br/> <span class='subscript'>All Janets to top</span>")
-        .OrderableUi(c => c.UseClientOrderingNumericExpression("({FirstName}=='Janet'?1:0)"));
+.Title("First Name <br/> <span class='subscript'>All Janets to top</span>")
+.OrderableUi(c => c.UseClientOrderingNumericExpression("({FirstName}=='Janet'?1:0)"));
     conf.Column(c => c.RegistrationDate)
         .Title("Registered <br/> <span class='subscript'>Descending ordering, hidden UI</span>")
         .Format("`moment({@}).fromNow()`")
