--- a/Reinforced.Lattice.CaseStudies.Filtering/Views/Home/Index.cshtml
+++ b/Reinforced.Lattice.CaseStudies.Filtering/Views/Home/Index.cshtml
@@ -14,21 +14,18 @@
 @model Reinforced.Lattice.CaseStudies.Filtering.Models.HomeIndexViewModel
 @{
     var conf = Model.Table;
-    conf.DatePicker(new DatepickerOptions(
-        "ltcCreateDatePicker",
-        "ltcPutDateToDatepicker",
-        "ltcGetDateFromDatepicker",
-        "ltcDestroyDatepicker"
-        ));
-
-    conf.Column(c => c.FirstName).Title("First name");
-
-    conf.Column(c => c.UserType).FilterMultiSelectUi(ui => ui.SelectItems(EnumHelper.GetSelectList(typeof(UserType))));
-
-    conf.Column(c => c.FirstName).FilterValueUi(ui => ui.ClientFiltering());
-    conf.Column(c => c.UserType).FilterRangeUi(ui => ui.ClientFiltering());
-    conf.Column(c => c.UserType).FilterSelectUi(ui => ui.ClientFiltering());
-    conf.Column(c => c.UserType).FilterMultiSelectUi(ui => ui.ClientFiltering());
+    conf.Column(c => c.Priority).Template(x =>
+    {
+        x.RazorIf("{@}==0", @<span style="color: #c7c7c7"><span class="glyphicon glyphicon-unchecked"></span> Minor</span>);
+        x.RazorIf("{@}==1", @<span style="color: #049404"><span class="glyphicon glyphicon-arrow-down"></span> Low</span>);
+        x.RazorIf("{@}==2", @<span><span class="glyphicon glyphicon-tasks"></span> Normal</span>);
+        x.RazorIf("{@}==3", @<span style="color: #ff4489"><span class="glyphicon glyphicon-arrow-up"></span> High</span>);
+        x.RazorIf("{@}==4", @<span style="color: #e89a0c"><span class="glyphicon glyphicon-exclamation-sign"></span> Major</span>);
+        x.RazorIf("{@}==5", @<span style="color: #dc0000"><span class="glyphicon glyphicon-fire"></span> Critical</span>);
+    });
+    conf.Column(c => c.Supplier).FilterValueUi(ui => ui.ClientFiltering());
+    conf.Column(c => c.EndDate).FilterValueUi(c => c.CompareOnlyDates().Inputdelay(10).ClientFiltering());
+    conf.Column(c => c.Price).FilterValueUi(c => c.Placeholder("Max. Price").Inputdelay(10).ClientFilteringExpression("{@} < x"));
 }
 <div id="table"></div>
 
@@ -66,8 +63,37 @@
         var ltcDestroyDatepicker = function (element) {
             $(element).datepicker('remove');
         }
-    </script>
 
+        function formatRating(v) {
+            var s = "<div style='color:orange' class='text-center'>";
+            for (var i = 0; i < 5; i++) {
+                if (i < v.DataObject.Rating) s += "<span class='glyphicon glyphicon-star'></span>";
+                else s += "<span class='glyphicon glyphicon-star-empty'></span>";
+            }
+            s += "</div>";
+            return s;
+        }
+        function fixColumnWidths(e) {
+            $(e.Renderer.RootElement).find('th').each(function () {
+                var sx = $(this).width();
+                $(this).css('width', sx + 'px');
+            });
+        }
+    </script>
+    <style type="text/css">
+        [data-track='h-Tax'] {
+            width: 150px;
+        }
+        [data-track='h-Price'] {
+            width: 120px;
+        }
+        [data-track='h-StartDate'] {
+            width: 120px;
+        }
+        [data-track='h-EndDate'] {
+            width: 120px;
+        }
+    </style>
     @{ Html.RenderTemplates("lt", "Lattice_Templates_Bootstrap"); }
-    @Model.Table.InitializationScript("table", "window.$$table")
+    @Model.Table.OnInitialized("fixColumnWidths").InitializationScript("table", "window.$$table")
 }
