--- a/Reinforced.Lattice.CaseStudies.Filtering/Views/Shared/_Layout.cshtml
+++ b/Reinforced.Lattice.CaseStudies.Filtering/Views/Shared/_Layout.cshtml
@@ -58,6 +58,14 @@
             });
         }
     </script>
+    <style type="text/css">
+        .subscript {
+            font-weight: normal;
+            font-size: 11px;
+            color: #0586e1;
+            font-family: monospace;
+        }
+    </style>
     @RenderSection("scripts", required: false)
 </head>
 <body>
