--- a/Reinforced.Lattice.CaseStudies.Filtering/Views/MultiSelectFilter/Index.cshtml
+++ b/Reinforced.Lattice.CaseStudies.Filtering/Views/MultiSelectFilter/Index.cshtml
@@ -36,6 +36,14 @@
 
     conf.Column(c => c.Priority)
         .FilterMultiSelectUi(ui => ui.SelectAny().SelectItems(EnumHelper.GetSelectList(typeof(Priority))).ClientFiltering());
+    conf.Column(c => c.Price)
+        .Title("Price <br/> <span class='subscript'>Server filtering, w. overriden filter delegate</span>");
+    conf.Column(c => c.Rating)
+        .Title("Rating <br/> <span class='subscript'>Server filtering</span>");
+    conf.Column(c => c.Priority)
+        .Title("Priority <br/> <span class='subscript'>Client filtering</span>");
+    conf.Column(c => c.Scope)
+        .Title("Scope <br/> <span class='subscript'>Client filtering</span>");
 }
 <div id="table"></div>
 
