--- a/Reinforced.Lattice.CaseStudies.CoreTemplating/Views/IkeaChairs/Disclamer.cshtml
+++ b/Reinforced.Lattice.CaseStudies.CoreTemplating/Views/IkeaChairs/Disclamer.cshtml
@@ -1,5 +1,5 @@
-﻿<div xmlns:exslt="http://exslt.org/common" xmlns:ac="http://adcopy.ikea.com" class="gridRow">
-    <div class="sixColumn">
+﻿<div xmlns:exslt="http://exslt.org/common" xmlns:ac="http://adcopy.ikea.com" class="gridRow" style="margin-bottom: 2px;">
+    <div class="sixColumn" style="width: 100%">
         <div class="categoryGray">
             <h1>Disclamer</h1>
         </div>
@@ -7,9 +7,11 @@
         <p class="bodyTextGray">
             Thank you very much for supplied test data, CSS styles and images taken directly from your website. I do like IKEA products and really appreciate job done by your designers and photographers! Therefore, I recommend everyone who visit this page to go to nearest IKEA store and by some of these pretty dinning chairs!
             Also, download and use Reinforced.Lattice framework and create nasty e-shop showcases by yourself. It took 4 hours to create this demo including styles and markup acquiring.
+            
         </p>
-    </div>
-    <div class="sixColumn lastColumn floatRight gridComponent">
+        <p class="bodyTextGray" style="text-align: center">
+            <b>Warning!</b> This sample contains potentially unlimited set of data! Be careful
+        </p>
         
     </div>
 </div>
